--- a/Dicee-iOS13/Base.lproj/Main.storyboard
+++ b/Dicee-iOS13/Base.lproj/Main.storyboard
@@ -38,6 +38,9 @@
                                 <state key="normal" title="Roll">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
+                                <connections>
+                                    <action selector="rollButtonPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="KPc-C0-lzR"/>
+                                </connections>
                             </button>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" image="DiceSix" translatesAutoresizingMaskIntoConstraints="NO" id="82W-mi-zCQ">
                                 <rect key="frame" x="249" y="338" width="120" height="120"/>
@@ -47,6 +50,10 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
+                    <connections>
+                        <outlet property="diceeView1" destination="PVI-hF-ncT" id="nf6-PW-32Q"/>
+                        <outlet property="diceeView2" destination="82W-mi-zCQ" id="Rak-kD-YFU"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
